fix: Fix image stretching issue and adjust margin-left of image in contact.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -839,12 +839,17 @@ input, label {
     letter-spacing: 1px;
 }
 
-#contact-image {
-    width: 90%;
-    height: 90%;
+
+#contact-image-inner {
+    width: 400px;
+    height: 500px;
+    position: relative;
+    margin-left: 120px;
 
     border-radius: 50px;
 }
+
+
 
 /* TIMETABLE*/
 
